fix jumpy

--- a/styles.less
+++ b/styles.less
@@ -8,7 +8,14 @@
  * http://www.lesscss.org
  */
 
-atom-text-editor::shadow {
+atom-text-editor::shadow .jumpy {
+    &.label {
+      color: #000;
+      background-color: #0f0;
+    }
+    &.jump {
+      background-color: #ff0;
+    }
 }
 
 .theme-atom-dark-ui {
